--- a/build.gradle
+++ b/build.gradle
@@ -2,32 +2,30 @@ plugins {
     id 'java'
 }
 
-group = 'essentialsmagic'
+group = 'EssentialsMagic'
 version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
     maven {
-        name = "papermc-repo"
-        url = "https://repo.papermc.io/repository/maven-public/"
+        name = "spigotmc-repo"
+        url = "https://hub.spigotmc.org/nexus/content/repositories/snapshots/"
     }
     maven {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
     }
     maven {
-        name = "oraxen"
         url = "https://repo.oraxen.com/releases"
     }
 }
 
 dependencies {
-    compileOnly("io.papermc.paper:paper-api:1.20.6-R0.1-SNAPSHOT")
+    compileOnly("org.spigotmc:spigot-api:1.20.6-R0.1-SNAPSHOT")
     compileOnly("io.th0rgal:oraxen:1.178.0")
     implementation("net.kyori:adventure-api:4.9.3")
     implementation("net.kyori:adventure-platform-bukkit:4.1.1")
 }
-
 
 def targetJavaVersion = 21
 java {
@@ -42,8 +40,6 @@ java {
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 
-    options.compilerArgs << "-Xlint:deprecation"
-
     if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
         options.release.set(targetJavaVersion)
     }
@@ -53,7 +49,7 @@ processResources {
     def props = [version: version]
     inputs.properties props
     filteringCharset 'UTF-8'
-    filesMatching('paper-plugin.yml') {
+    filesMatching('plugin.yml') {
         expand props
     }
 }
