--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compileOnly("io.th0rgal:oraxen:1.178.0")
     implementation("net.kyori:adventure-api:4.9.3")
     implementation("net.kyori:adventure-platform-bukkit:4.1.1")
+    compileOnly("net.luckperms:api:5.4")
 }
 
 def targetJavaVersion = 21
