--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,3 +5,8 @@ api-version: '1.20'
 authors: [ GabrielBitello ]
 description: A essentials plugin
 depend: [Oraxen]
+commands:
+  magicfire:
+    aliases: [mf]
+    description: Comando principal do MagicFire
+    usage: /<command> <subcommand>
