--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ repositories {
     maven {
         url = "https://repo.oraxen.com/releases"
     }
+    maven {
+        url = "https://maven.enginehub.org/repo/"
+    }
 }
 
 dependencies {
@@ -26,6 +29,9 @@ dependencies {
     implementation("net.kyori:adventure-api:4.9.3")
     implementation("net.kyori:adventure-platform-bukkit:4.1.1")
     compileOnly("net.luckperms:api:5.4")
+    compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.10'
+    compileOnly 'com.sk89q.worldedit:worldedit-bukkit:7.3.6'
+
 }
 
 def targetJavaVersion = 21
