--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -26,3 +26,7 @@ commands:
     description: "Comando para definir e teleportar para a home."
     usage: "/home [set]"
     permission: "EssentialsMagic.Home"
+  psgpd:
+    description: "Comando para definir e teleportar para o spawn do GPD."
+    usage: "/psgpd <order>"
+    permission: "EssentialsMagic.Psgpd"
